[Mission6] menuActivity using Linear layout

--- a/Mission6/app/src/main/AndroidManifest.xml
+++ b/Mission6/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MenuActivity"></activity>
+        <activity
+            android:name=".MenuActivity"
+            android:label="메인 메뉴">
+
+        </activity>
     </application>
 
 </manifest>
